// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NodeJSSettingsPicker /> renders the NodeJSSettingsPicker correctly 1`] = `
<DocumentFragment>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <label
        class="pf-c-form__label"
        for="name"
      >
        <span
          class="pf-c-form__label-text"
        >
          Name
        </span>
      </label>
      <input
        aria-invalid="false"
        aria-label="Nodejs package name"
        class="pf-c-form-control"
        id="name"
        name="name"
        pattern="^(?=.{1,214}$)(?:@[a-z0-9-~][a-z0-9-._~]*\\\\/)?[a-z0-9-~][a-z0-9-._~]*$"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="pf-c-form__group"
    >
      <label
        class="pf-c-form__label"
        for="version"
      >
        <span
          class="pf-c-form__label-text"
        >
          Version
        </span>
      </label>
      <input
        aria-invalid="false"
        aria-label="Nodejs version"
        class="pf-c-form-control"
        id="version"
        name="version"
        required=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`<NodeJSSettingsPicker /> show error for invalid data 1`] = `
<DocumentFragment>
  <div
    class="form-panel"
    style="padding: 20px;"
  >
    <form
      class="pf-c-form"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <label
          class="pf-c-form__label"
          for="name"
        >
          <span
            class="pf-c-form__label-text"
          >
            Name
          </span>
        </label>
        <input
          aria-invalid="true"
          aria-label="Nodejs package name"
          class="pf-c-form-control"
          id="name"
          name="name"
          pattern="^(?=.{1,214}$)(?:@[a-z0-9-~][a-z0-9-._~]*\\\\/)?[a-z0-9-~][a-z0-9-._~]*$"
          required=""
          type="text"
          value="invalid name"
        />
        <div
          aria-live="polite"
          class="pf-c-form__helper-text pf-m-error"
          id="name-helper"
        >
          Please provide a valid name
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <label
          class="pf-c-form__label"
          for="version"
        >
          <span
            class="pf-c-form__label-text"
          >
            Version
          </span>
        </label>
        <input
          aria-invalid="true"
          aria-label="Nodejs version"
          class="pf-c-form-control"
          id="version"
          name="version"
          required=""
          type="text"
          value="1"
        />
        <div
          aria-live="polite"
          class="pf-c-form__helper-text pf-m-error"
          id="version-helper"
        >
          Please provide a valid version number
        </div>
      </div>
    </form>
    <hr
      class="separator"
    />
    <div
      class="pf-l-toolbar"
    >
      <div
        class="pf-l-toolbar__group"
      >
        <button
          aria-label="Save form"
          class="pf-c-button pf-m-primary pf-m-disabled"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
      <div
        class="pf-l-toolbar__group"
      >
        <button
          aria-label="Cancel form"
          class="pf-c-button pf-m-secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
